--- a/Лабораторна робота 4/resources/style.css
+++ b/Лабораторна робота 4/resources/style.css
@@ -1,1 +1,203 @@
+body {
+  background-color: #FFFFE0;
+}
+
+#indanim {
+  width: 200px;
+  height: 200px;
+  background: pink;
+  position: relative;
+  top: 50px;
+  transition-timing-function: linear;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-name: animat;
+}
+
+@keyframes animat {
+  from { 
+  	background: red;
+  }
+  25% {
+  	background: pink;
+  	transform: translate(1320px, 0px);
+  }
+  50% {
+  	background: yellow;
+  	transform: translate(1320px, 400px);
+  }
+  75% {
+  	background: brown;
+  	transform: translate(0px, 400px);
+  }
+  to {
+    background: blue;
+  }
+}
+
+#rectangle.rec1 {
+  width: 300px;
+  height: 100px;
+  background: red;
+  transform: translate(650px, 150px);
+  transition-timing-function: linear;
+  transition-duration: 3s;
+}
+
+.box {
+  width: 200px;
+  height: 200px;
+  background: blue;
+  position: relative;
+  left: 650px;
+  top: 150px;
+  transform: rotateZ(45deg);
+  transition-timing-function: linear;
+  transition-duration: 2s;
+}
+
+#circle {
+  height: 250px;
+  width: 250px;
+  background: pink;
+  position: relative;
+  border-radius: 1000%;
+  left: 620px;
+  top: 150px;
+  transform: scale(2, 0.5);
+  transition-timing-function: ease-out;
+  transition-duration: 2.25s;
+}
+
+#rectangle.rec2 {
+  width: 200px;
+  height: 200px;
+  background: blue;
+  position: relative;
+  left: 650px;
+  top: 150px;
+  animation-duration: 22.5s;
+  animation-name: color_change;
+}
+
+@keyframes color_change {
+  from { 
+  	background: red;
+  }
+  9% {
+  	background: pink;
+  }
+  50% {
+  	background: yellow;
+  }
+  91% {
+  	background: brown;
+  }
+  to {
+    background: blue;
+  }
+}
+
+#rectangle.rec3 {
+  width: 200px;
+  height: 200px;
+  background: blue;
+  position: relative;
+  top: 150px;
+  transition-timing-function: linear;
+  animation-duration: 18s;
+  animation-name: anim;
+}
+
+@keyframes anim {
+  from {
+  	background: red;
+  }
+  50% {
+  	background: orange;
+  	transform: translate(650px, 0px) scale(2);
+  }
+  to {
+  	background: blue;
+  	transform: translate(0px, 0px) scale(1);
+  }
+}
+
+.contents {
+  overflow: hidden;
+  background-color: #DEB887;
+}
+
+.contents a {
+  float: left;
+  color: #f2f2f2;
+  padding: 10px 14px;
+  text-decoration: none;
+  font-size: 19px;
+}
+
+.contents a:hover {
+  background-color: #ddd;
+  color: black
+}
+
+.flex {
+  margin-left: 14vw;
+  width: 69vw;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex > div { height: 5vw; }
+
+.flex > .f1 { width: 37vw; }
+.flex > .f2 { width: 32vw; }
+.flex > .f3 { width: 7vw; }
+.flex > .f4 { width: 25vw; }
+.flex > .f5 { width: 30vw; }
+.flex > .f6 { width: 7vw; }
+.flex > .f7 { width: 69vw; }
+
+.f1 { background: indigo; }
+.f2 { background: blue; }
+.f3 { background: khaki; }
+.f4 { background: plum; }
+.f5 { background: tan; }
+.f6 { background: wheat; }
+.f7 { background: orange; }
+
+.grid {
+  margin-left: 14vw;
+  display: grid;
+  grid-template-columns: 22% 18% 8% 16% 25%;
+  grid-template-rows: 18% 30% 3% 24% 26% 18%; 
+  width: 80%;
+  height: 30vw;
+}
+
+.grid > .g1 { grid-column: 1/4; grid-row: 1; }
+.grid > .g2 { grid-column: 1/4; grid-row: 2/4; }
+.grid > .g3 { grid-column: 1/4; grid-row: 4/5; }
+.grid > .g4 { grid-column: 1/2; grid-row: 5/7; }
+.grid > .g5 { grid-column: 2/3; grid-row: 5/7; }
+.grid > .g6 { grid-column: 3/4; grid-row: 5/7; }
+.grid > .g7 { grid-column: 4/6; grid-row: 1; }
+.grid > .g8 { grid-column: 4/5; grid-row: 2/5; }
+.grid > .g9 { grid-column: 5/6; grid-row: 2/3; }
+.grid > .g10 { grid-column: 5/6; grid-row: 3/5; }
+.grid > .g11 { grid-column: 4/6; grid-row: 5/6; }
+.grid > .g12 { grid-column: 4/6; grid-row: 6/7; }
+
+.g1 { background: gold; }
+.g2 { background: red; }
+.g3 { background: teal; }
+.g4 { background: tomato; }
+.g5 { background: crimson; }
+.g6 { background: sienna; }
+.g7 { background: pink; }
+.g8 { background: salmon; }
+.g9 { background: chocolate; }
+.g10 { background: green; }
+.g11 { background: lime; }
+.g12 { background: turquoise; }
 
