--- a/Лабораторна робота 7/sources/resources/style.css
+++ b/Лабораторна робота 7/sources/resources/style.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .head {
   display: flex;
   flex-wrap: wrap;
@@ -13,6 +19,8 @@
 
 .button {
   margin: 2vw;
+  position: relative;
+  display: inline-block; 
 }
 
 .pics {
@@ -21,4 +29,42 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.box{
+  font-size: 0;
+  position: relative;
+  display: inline-block; 
+}
+
+.button_text {
+  position: absolute;
+  top: 100%; 
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+}
+
+.box_1_text{
+  position: absolute;
+  top: 45%; 
+  left: 70%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: xx-large;
+}
+
+.box_2_text{
+  position: absolute;
+  top: 45%; 
+  left: 20%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: xx-large;
+}
+
+.screen_app_text {
+  position: absolute;
+  top: 20%; 
+  left: 30%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: xx-large;
+}
+
 
