--- a/Лабораторна робота 7/sources/resources/style.css
+++ b/Лабораторна робота 7/sources/resources/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .button {
-  margin: 2vw;
+  margin-left: 4vw;
   position: relative;
   display: inline-block; 
 }
@@ -33,38 +33,74 @@ body {
 .box{
   font-size: 0;
   position: relative;
-  display: inline-block; 
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .button_text {
-  position: absolute;
+  position: relative;
+  left: -30%;
   top: 100%; 
   font-family: Arial, Helvetica, sans-serif;
-  font-size: large;
+  font-size: small;
 }
 
 .box_1_text{
   position: absolute;
-  top: 45%; 
-  left: 70%;
-  font-family: Arial, Helvetica, sans-serif;
+  top: 35%; 
+  left: 60%;
   font-size: xx-large;
 }
 
 .box_2_text{
   position: absolute;
-  top: 45%; 
+  top: 35%; 
   left: 20%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: xx-large;
+}
+
+.title_text {
+  position: absolute;
+  top: 0%; 
+  left: 35%;
+  font-size: xx-large;
+}
+
+.under_title_text {
+  position: absolute;
+  top: 90%; 
+  left: 37%;
   font-size: xx-large;
 }
 
 .screen_app_text {
   position: absolute;
-  top: 20%; 
-  left: 30%;
-  font-family: Arial, Helvetica, sans-serif;
+  top: 10%; 
+  left: 25%;
   font-size: xx-large;
+}
+
+.text_under {
+  position: absolute;
+  top: 200%; 
+  color: rgb(194, 178, 178);
+  font-size: small;
+}
+
+.title_text_under {
+  position: absolute;
+  top: 200%; 
+  left: 20%;
+  color: rgb(194, 178, 178);
+  font-size: small;
+}
+
+.text_upper {
+  position: absolute;
+  top: -100%; 
+  left: 10%;
+  color: rgb(194, 178, 178);
+  font-size: small;
 }
 
 
