--- a/Лабораторна робота 7/sources/resources/style.css
+++ b/Лабораторна робота 7/sources/resources/style.css
@@ -12,6 +12,7 @@ body {
 
 .buttons {
   margin-top: 3vh;
+  margin-bottom: 30vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -85,6 +86,14 @@ body {
   top: 200%; 
   color: rgb(194, 178, 178);
   font-size: small;
+}
+
+.text_under_button {
+  position: absolute;
+  top: 240%; 
+  color: rgb(194, 178, 178);
+  font-size: x-small;
+  text-align: center;
 }
 
 .title_text_under {
